# char-rag

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py  chat.py
